GDB-6143 Changes the object used for endpoint creation from URL to URI
- Changed the object for the creation of the full address of the command
endpoints from `URL` to `URI`.
- Updated all of the affected command implementations and tests.
- Prepare for release of version `1.3.0`.