@@ -1,13 +1,13 @@
 package com.ontotext.refine.client;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import org.apache.http.impl.client.HttpClients;
 
 public interface RefineClients {
 
-  static RefineClient create(String url) throws MalformedURLException {
+  static RefineClient create(String uri) throws URISyntaxException {
     // TODO configure some sensible timeouts and other configurations
-    return new RefineClient(new URL(url), HttpClients.createDefault());
+    return new RefineClient(new URI(uri), HttpClients.createDefault());
   }
 }
