@@ -15,9 +15,8 @@ import com.ontotext.refine.client.ResponseCode;
 import com.ontotext.refine.client.command.RefineCommands;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.charset.Charset;
 import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpVersion;
@@ -42,9 +41,9 @@ class ApplyOperationsCommandTest {
   private ApplyOperationsCommand command;
 
   @BeforeEach
-  void setUp() throws MalformedURLException {
+  void setUp() throws URISyntaxException {
     refineClient = mock(RefineClient.class);
-    when(refineClient.createUrl(anyString())).thenReturn(new URL("http://localhost:3333/"));
+    when(refineClient.createUri(anyString())).thenReturn(new URI("http://localhost:3333/"));
     command = RefineCommands.applyOperations().token("test-token").project("1234567890")
         .operations(from("foo")).build();
   }
@@ -53,7 +52,7 @@ class ApplyOperationsCommandTest {
   void should_execute() throws IOException {
     command.execute(refineClient);
 
-    verify(refineClient).createUrl(anyString());
+    verify(refineClient).createUri(anyString());
     verify(refineClient).execute(any(), any());
   }
 
